meteorhq/meteorhq.css
/* CSS declarations go here */

body {
  padding-top: 45px;
}
.centered {
	text-align: center;
}

.darker-section {
	background: url("images/texture.png") repeat scroll 0 0 transparent;
	color: #fff;
}

section {
	padding: 30px 0;
}

.section-header {
    border-bottom: 3px solid #E3E4DD;
    box-shadow: 0 1px 0 #C2C4BB;
    margin-bottom: 15px;
    padding-bottom: 10px;
}

.white-card {
    background-color: #FAFBF7;
    background-image: linear-gradient(to bottom, #F8F9F4, #FDFDFB);
    background-repeat: repeat-x;
    box-shadow: 0 1px 4px 1px #B4B6A9, 2px 2px 1px 0 #FFFFFF inset;
    margin-bottom: 20px;
    padding: 10px;
}

.white-card h3 {
    border-bottom: 1px solid #CFD1C6;
    box-shadow: 0 1px 0 #FFFFFF;
    margin: 10px 0;
    padding-bottom: 10px;
    text-shadow: -1px -1px #FFFFFF;
}


footer {
    background: url("images/texture.png") repeat scroll 0 0 transparent;
    border-top: 2px solid #FFFFFF;
    color: #FFFFFF;
}

#twitter_feed_wrapper {
    background-color: rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid #000000;
    border-top: 1px solid #000000;
    margin-top: 48px;
    padding: 14px;
}

#twitter_feed_wrapper .twitter_feed_icon a {
    font-size: 70px;
    text-align: center;
    line-height: 10px;
}

section.stripped {
    background: url("images/stripped.png") repeat scroll left top transparent;
}

footer textarea,
footer input[type="text"] {
	width: 100%;
}

/*
.navbar-brand {
	padding: 2px 0;
}

.navbar-brand  img{
    height: 30px;
}
*/

.icon-6x {
    font-size: 6em;
}

.full-page-photo {
	height: 500px;
	width: 100%;
	overflow: hidden;
	position: fixed;
	top: 40px;
}

.full-page-photo .jumbotron {
	position: fixed;
	top: 140px;
	background-color: transparent;
	color: white;
	margin-bottom: 0;
}

.full-page-photo .jumbotron h1,
.full-page-photo .jumbotron p {
	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.6);
	padding: 5px;
}

.full-page-content {
    position: relative;
    top: 440px;
    background-color: #ffffff;
    overflow: auto;
}

.dotted-underline {
	border-bottom: 1px dashed #CEC6AE;
	padding-bottom: 10px;
}

.full-underline {
	border-bottom: 3px solid #E3E4DD;
    box-shadow: 0 1px 0 #C2C4BB;
    padding-bottom: 10px;
}

.shadow-boxing {
    background-color: #FAFBF7;
    background-image: linear-gradient(to bottom, #F8F9F4, #FDFDFB);
    background-repeat: repeat-x;
    box-shadow: 0 1px 4px 1px #B4B6A9, 2px 2px 1px 0 #FFFFFF inset;
    padding: 10px;
}

.services .row {
	margin: 30px 0;
}

.row.dotted-border {
	padding: 30px 0;
	border-bottom: 1px dashed #CEC6AE;
	border-top: 1px dashed #CEC6AE; 
}

.package-box {
	-moz-box-sizing: border-box;
    border: 1px solid #E7E7E7;
    border-radius: 6px 6px 6px 6px;
    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1);
    text-align: center;
}

.package-box h3 {
	background-color: #EEEEEE;
    border-bottom: 1px solid #CCCCCC;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
    margin: 0 0 10px;
    padding: 30px 5px;
}
.package-box ul {
	margin-top: 20px;
}

 .package-box button {
     margin-bottom: 15px;
 }

.method-stripped .jumbotron {
	background: transparent;
	text-align: center;
}

.method-picture {
    background: url(images/services.jpg) 50% 0 fixed;
    height: auto; 
    margin: 0 auto;
    width: 100%;
    position: relative;
    box-shadow: 0 0 50px rgba(0,0,0,0.8);
    color: #ffffff;
    padding: 100px 0;
}

.method-picture p {
	background-color: #333;
	padding: 5px;
	border-radius: 5px;
}

.method-stripped {
    background: url(images/stripped.png) 50% 0 fixed;
    height: auto;
    margin: 0 auto;
    width: 100%;
    position: relative;
    box-shadow: 0 0 50px rgba(0,0,0,0.8);
    padding: 100px 0;
}

.team-heading {
	margin: 30px 0;
}

.full-page-photo .img-responsive {
	min-width: 100%;
}

 .jumbotron.constrainWidth {
	margin-left: auto;
	margin-right: auto;
	max-width: inherit;
}

